# hello-world

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_SUMMARY.md  README.md  README_CPP.md  SUPERFLUID_README.md  V006_ARCHITECTURE.md  WINDOWS_BUILD_FIX.md  sim_v005.py  sim_v005_enhanced.py  sim_v006.py  sphere_4d_orthogonal.json  sphere_4d_perspective.json  sphere_4d_projection.py  sphere_4d_stereographic.json  superfluid_viz.html  visualize.html
HypersphereViz/: .gitignore  HypersphereViz.sln  HypersphereViz.vcxproj  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md
HypersphereViz/include/: D3D12Renderer.h  HypersphereGenerator.h  ImGuiRenderer.h  Math4D.h  d3dx12.h
HypersphereViz/shaders/: ComputePoints.hlsl  GeometryShader.hlsl  PixelShader.hlsl  PixelShaderPoints.hlsl  PixelShaderTriangles.hlsl  VertexShader.hlsl
HypersphereViz/src/: D3D12Renderer.cpp  HypersphereGenerator.cpp  ImGuiRenderer.cpp  Main.cpp
include/: application.h  camera.h  hypersphere_bec.h  math_utils.h  neighbor_tree.h  projector_4d.h  renderer.h  shader.h  simulation_params.h
src/: main.cpp
src/core/: math_utils.cpp  timer.cpp
src/simulation/: gpu_data.h  hypersphere_bec.cpp  neighbor_tree.cpp  simulation_params.cpp
src/simulation/cuda/: evolution_kernels.cu  laplacian_kernels.cu
src/ui/: application.cpp  controls.cpp
src/visualization/: camera.cpp  projector_4d.cpp  renderer.cpp  shader.cpp
